deleted song out of the github and added the span tag

--- a/HTML-CSS-JS/regular-html.html
+++ b/HTML-CSS-JS/regular-html.html
@@ -17,7 +17,7 @@
     </div>
     <div style="display: flex; flex-direction: row;">
         <ul type="square">
-            <li>Optimize your project by 40-50% with us</li>
+            <li>Optimize your <span style="color: blueviolet; font-weight: 700;">project</span> by 40-50% with us</li>
             <li>Create Beauiful UX Design to attrach customers</li>
             <li>Curate context that brings more people in</li>
         </ul>
