--- a/HTML-CSS-JS/regular-html.html
+++ b/HTML-CSS-JS/regular-html.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Regular HTML</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="container">
     <div>
         <h1>H1 Example</h1>
         <h2>H2 Example</h2>
@@ -15,20 +16,32 @@
         <h6>H6 Example</h6>
         <p>This is the p tag</p>
     </div>
-    <div style="display: flex; flex-direction: row;">
-        <ul type="square">
+    <div contenteditable="true"> 
+        This is an editable div. Click here to edit the text. 
+    </div>
+    <div style="display: flex; flex-direction: row; justify-content: space-around; flex-wrap: wrap;">
+        <ul type="square" style="flex: 1;">
             <li>Optimize your <span style="color: blueviolet; font-weight: 700;">project</span> by 40-50% with us</li>
+                <ul type="none">
+                    <li>projects of your choosing</li>
+                </ul>
             <li>Create Beauiful UX Design to attrach customers</li>
             <li>Curate context that brings more people in</li>
         </ul>
-        <ol start="5">
+        <ol start="5" style="flex: 1; margin: 0 15px;">
             <li>Hello, HTML</li>
             <li>Hello, HTML</li>
             <li>Hello, HTML</li>
             <li class="example-class">Hello, HTML</li>
         </ol>
+        <dl style="flex: 1;">
+            <dt>Coffee</dt>
+            <dd>Black hot drink</dd>
+            <dt>Milk</dt>
+            <dd>White cold drink</dd>
+        </dl>
     </div>
-    <img src="./20240210200445_1.jpg" alt="a palworld" height=400>
+    <img src="./20240210200445_1.jpg" alt="a palworld" height=400 class="tv-image">
     <video controls>
         <source src="Matthew Martin's Doom Fight Like Hell Cinematic Trailer.m4a">
     </video>
