--- a/HTML-CSS-JS/semantic-html.html
+++ b/HTML-CSS-JS/semantic-html.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semantic HTML</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
+<body class="container">
     <header>
         <h1>H1 Example</h1>
         <h2>H2 Example</h2>
@@ -105,7 +106,7 @@
                 Remember Me:
             </label>
             <input type="checkbox" name="remember-me" id="remember-me">
-            <select name="dnd-character" id="character-class">
+            <select name="dnd-character" id="character-class" class="form-select">
                 <option value=""> --Please Select a Class --</option>
                 <option value="paladin">Paladin</option>
                 <option value="bard">Bard</option>
@@ -122,5 +123,6 @@
             background-color: aquamarine;
         }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
